fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ table{
   text-align: center;
   padding: 20px;
   text-decoration: none !important;
-  margin: auto;
+  margin-right: auto;
+  margin-left: 5%;
 
 }
 
